kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-deployment
  labels:
    app: tic-tac-toe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
        - name: tic-tac-toe
          image: ghcr.io/Rutvikgalale/tic-tac-toe:sha-424d191d4c445003a0818d224e1917a3fb143270
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
